--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.brand {
+    background: linear-gradient(180deg, #E60000 0.07%, #FFCC00 30.94%, #007F00 65.61%, #0000CC 99.94%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    writing-mode: vertical-rl;
+}
+
+@media screen and (max-width:640px){
+    .brand {
+        background: linear-gradient(180deg, rgba(230, 0, 0, 0.12) 0.07%, rgba(255, 204, 0, 0.12) 30.94%, rgba(0, 127, 0, 0.12) 65.61%, rgba(0, 0, 204, 0.12) 99.94%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        writing-mode: vertical-rl;
+    }
+}
